2002-06-13  Werner Koch  <wk@gnupg.org>

	* writer.c (ksba_writer_write_octet_string): Correctly write
	undefined length octet strings.
	* cms.c (ct_build_signed_data): Write an end tag for non-detached
	sigs.
	(build_enveloped_data_header): Fix doc; it is an explicit octect
	string.
	(read_encrypted_cont): Read constructed octet strings.

2002-06-12  Werner Koch  <wk@gnupg.org>

	* writer.c (ksba_writer_write_octet_string): New.
	* cms.c (write_encrypted_cont): Use it here.

2002-05-17  Werner Koch  <wk@gnupg.org>

	* Makefile.am: Tweaked to avoid double compilations.

	* cms.c (ksba_cms_identify): New.

2002-05-16  Werner Koch  <wk@gnupg.org>

	* cms-parser.c (_ksba_cms_parse_signed_data_part_1): Never
	allocate 0 bytes - this is not defined.

2002-05-04  Werner Koch  <wk@gnupg.org>

	* dn.c (parse_rdn): Better detection of empty elements.

2002-04-27  Werner Koch  <wk@gnupg.org>

	* cms.c (read_and_hash_cont): Handle constructed octet strings.
	* cms-parser.c (_ksba_cms_parse_signed_data_part_2): Eat one
	pending end tag.

2002-04-15  Werner Koch  <wk@gnupg.org>

	* version.c: New.

	* dn.c (append_ucs4_value,append_ucs2_value): Implemented.

	* cert.c (ksba_cert_get_auth_key_id): New.
	* name.c (_ksba_name_new_from_der): Add support for "Name" type.
	* dn.c (_ksba_derdn_to_str): New.

2002-03-22  Werner Koch  <wk@gnupg.org>

	* cert.c (get_name): Fixed enumerating of alternate names.

	* name.c: New.
	* ksba.h (KsbaName): New.  Added defintions for the name functions.
	(KsbaCRLReason): Changed values to allow use as bit flags.
	* cert.c (parse_distribution_point): New. 
	(ksba_cert_get_crl_dist_point): New.

2002-03-15  Werner Koch  <wk@gnupg.org>

	* asn1-func.c (_ksba_asn_check_identifier): Better check against
	overflow, also the data used is static.

2002-03-13  Werner Koch  <wk@gnupg.org>

	* cms.h (value_tree_s): New and use it for recp_info.
	(enc_val_s): New, use it in certlist and remove it from the
	ksba_cms_s and change all users.