@@ -1,3 +1,9 @@
+2002-06-17  Werner Koch  <wk@gnupg.org>
+
+	* cms.c (write_encrypted_cont): Don't use write_octet_stream here
+	because this is used with an implicit tag and the outer context
+	already provides the constructed containter.
+
 2002-06-13  Werner Koch  <wk@gnupg.org>
 
 	* writer.c (ksba_writer_write_octet_string): Correctly write
